# LookmaxENG

./: README.md  config.py  finder.py  main.py  ocr.py  pyproject.toml  run.bat  server.py
backend/: config.py  english_app.db
backend/api/depends/: session_dep.py
backend/api/routers/: words.py
backend/database/: session.py
backend/models/: words.py
backend/repository/: words.py
backend/services/: words.py
backend/static/: style.css
backend/static/js/: save_anki.js  words.js
backend/templates/: index.html  popup.html
backend/utils_backend/: translater.py
backend/web/routers/: words.py
desktop/: api.py  window_create.py
desktop/popup_window/: manager.py
schemes/: word.py
utils/: enable_dpi_awareness.py  ocr.py
