[project]
name = "lookmaxeng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "winrt-windows-foundation-collections",
    "winrt-windows-foundation",
    "winrt-windows-globalization",
    "winrt-windows-graphics-imaging",
    "winrt-windows-media-ocr",
    "winrt-windows-storage-streams",
    "Pillow",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "pynput",
    "aiohttp",
    "aiosqlite",
    "alembic",
    "genanki",
    "jinja2",
    "pydantic-settings",
    "python-multipart",
    "uvicorn",
    "requests>=2.34.2",
    "pywebview>=6.2.1",
    "google-genai>=2.12.0",
    "httpx[socks]>=0.28.1",
    "translators>=6.0.4",
]
